# sensor-data-processing-sim

./: .gitignore  LICENSE  README.md  pyproject.toml
data/generators/: README.md  pyproject.toml
data/generators/src/generators/: __init__.py  accelerometer.py
data/generators/tests/: test_accelerometer.py
data/qa_analysis/: accelerometer_gen_data_qa.ipynb
data/sim_data_gen/: pyproject.toml
data/sim_data_gen/src/sim_data_gen/: __init__.py  accelerometer.py
data/sim_data_gen/tests/: test_accelerometer.py
data/streams/: pyproject.toml
data/streams/src/streams/: pipe_accelerometer_to_s3.py
data/streams/tests/: test_accelerometer_gen_to_s3.py
data/transformers/: pyproject.toml
data/transformers/src/transformers/: derive_datetime_components.py
data/writers/: pyproject.toml
data/writers/src/writers/: __init__.py  s3_parquet_writer.py  s3_writer.py
data/writers/tests/: test_s3_writer.py
infra/terraform/: iam.tf  outputs.tf  s3.tf  terraform.tfstate  terraform.tfstate.backup  timestream.tf  variables.tf
learnings/: README.md  data-storage-manipulation.md  python.md  robotics.md  tooling.md
