[project]
name = "sensor-data-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["data/sim_data_gen"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = [
    "basedpyright>=1.28.4",
]

