[project]
name = "sensor-data-sim"
version = "0.1.0"
description = "Project centered around the generation, processing, analysis, and display of mock sensor data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["data/generators"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = [
    "basedpyright>=1.28.4",
]

