[project]
name = "generators"
version = "0.2.0"
description = "Various functions for generating mock data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "pydantic>=2.11.1",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
