[project]
name = "sim-data-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abhi Kumar", email = "abhinavbkumar@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "pydantic>=2.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
