[project]
name = "streams"
version = "0.2.0"
description = "Library to run batch/stream data pipelines based on JSON configs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "generators",
    "pydantic>=2.11.1",
    "transformers",
    "writers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
generators = { workspace = true }
writers = { workspace = true }
transformers = { workspace = true }
