[project]
name = "transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abhi Kumar", email = "abhinavbkumar@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
