[project]
name = "writers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abhi Kumar", email = "abhinavbkumar@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.1",
    "s3fs>=2025.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "boto3-stubs>=1.37.36",
    "pandas-stubs>=2.2.3.250308",
    "pyarrow-stubs>=19.1",
]
