[project]
name = "writers"
version = "0.2.0"
description = "Package containing writers that take data and write to a specified destination"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
